# openglr

./: .gitignore  CMakeLists.txt
src/: openglr.hpp  pch.hpp
src/window/: window.cpp  window.hpp
tests/: buildTest.cpp  glad_render.cpp  glfw_create_window.cpp  openglr_create_window.cpp
